--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<a href="index.html?page=concerns">
 				<div class="navLink" id="page5">
 					<img src="hashtag.png" id="smallhashtag">
-					other-concerns
+					data-concerns
 				</div>
 			</a>
 		</div>
