--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="grid">
 		<div class="siteName">
-		The Issue With Discord
+			The Issue With Discord
 		</div>
 
 		<div id = "pageTitle">
@@ -58,6 +58,12 @@
 		</div>
 
 	</div>
+	<!-- PROF NOTE: Using Fancybox 5 from: https://fancyapps.com/fancybox/getting-started/ -->
+	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+	<link
+	rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+	/>
 	<script src="script.js"></script>
 </body>
 </html>
